--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   .w-title{font-weight:800;color:#475569;font-size:11px}
   .w-row{display:grid;grid-auto-flow:column;grid-template-rows:repeat(2,auto);gap:3px 4px;overflow-x:auto}
   .more-toggle{border:1px dashed #cbd5e1;border-radius:8px;padding:2px 8px;background:#fff;font-size:11px;cursor:pointer}
-  /* чип уменьшен ещё в 2 раза */
+  /* чип ещё меньше */
   .chip{border:1px solid #c7d2fe;border-radius:10px;padding:3px 6px;background:#eef2ff;color:#0b1e4a;display:inline-flex;flex-direction:column;gap:2px;min-width:max-content}
   .chip .top{display:flex;gap:4px;align-items:center}
   .chip .name{font-weight:800;font-size:11px}
@@ -98,7 +98,7 @@
       <div class="field">
         <label for="date">Дата</label>
         <input id="date" type="date" />
-        <span id="shiftBadge" class="badge" title="Изменить количество">👥 В смене: —</span>
+        <span id="shiftBadge" class="badge" title="Подробнее">👥 В смене: —</span>
       </div>
       <button id="setShift" class="btn btn-acc" title="Количество человек в смене">👥 Кол-во</button>
       <button id="addWaiter" class="btn btn-acc">Добавить официанта</button>
@@ -169,7 +169,7 @@
 
 /* ====== КОНСТАНТЫ/ДАННЫЕ ====== */
 const UUID=(crypto&&crypto.randomUUID)?()=>crypto.randomUUID():()=>('id-'+Math.random().toString(36).slice(2));
-const STORAGE_KEY='rota-compact-v6'; // новая версия
+const STORAGE_KEY='rota-compact-v7'; // фикс: стабильное имя константы банкетов + автосчёт смены
 const MAX_AGE_DAYS=30;
 
 const CHIP_COLORS=[['#E3F2FD','#0b1e4a'],['#FCE7F3','#3e1a36'],['#E8F5E9','#103b1f'],['#FFF3E0','#4a2f0b'],['#F3E8FF','#2e1065'],['#E0F2F1','#083d3b'],['#FFFDE7','#3a3000'],['#F1F5F9','#0f172a'],['#FFE4E6','#4a0b15'],['#EDE7F6','#1f1147']];
@@ -191,7 +191,7 @@ const CANON_HALLS=[
   {name:'Веранда', positions:['Веранда 1','Веранда 2']},
   {name:'Лофт', positions:['Лофт']},
   {name:'Винная комната', positions:['Винная комната']}
-];
+};
 
 const BANQUET_TYPES={'ДР':'🎉 ДР','Свадьба':'💍 Свадьба','Корпоратив':'🏢 Корпоратив','Конференция':'📣 Конференция','День памяти':'🕯️ День памяти','Другой':'🏷️ Другое'};
 
@@ -208,14 +208,13 @@ function buildDB(){
     assignments:{},  // date -> hallId -> posId -> [{k:'w'|'b', id}]
     notes:{},        // date -> waiterId -> [tags]
     banquets:{},     // date -> [{id,type,people,other?,note?}]
-    shiftSize:{},    // date -> number (синхронизируем с уникальным количеством)
-    lastSeenISO: todayISO() // для чистки
+    shiftSize:{},    // date -> number (держим = уникальным именам)
+    lastSeenISO: todayISO()
   };
 }
 function load(){ try{return JSON.parse(localStorage.getItem(STORAGE_KEY));}catch{return null;} }
 let db = load() || buildDB();
-purgeOldData();
-save();
+purgeOldData(); save();
 
 /* ====== УТИЛЫ ====== */
 const dateEl=document.getElementById('date');
@@ -242,18 +241,14 @@ function waiterIdByName(name){return db.waiters.find(w=>w.name===name)?.id}
 function colorForWaiter(id){const i=Math.max(0, db.waiters.findIndex(w=>w.id===id)); const [bg,fg]=CHIP_COLORS[i%CHIP_COLORS.length]; return {bg,fg}}
 function banquetsForDay(){const k=dateKey(); if(!db.banquets[k]) db.banquets[k]=[]; return db.banquets[k];}
 function banquetById(id){return banquetsForDay().find(b=>b.id===id)}
-function shiftForDay(){const k=dateKey(); return db.shiftSize[k] ?? null;}
-function setShiftForDay(n){ db.shiftSize[dateKey()] = n; save(); renderShiftBadge(); }
 function uniqueWaitersAll(){
   const ass=dayAss(); const ids=new Set();
   for(const hid in ass){ for(const pid in ass[hid]){ (ass[hid][pid]||[]).forEach(e=>{ if(e.k==='w') ids.add(e.id); }); } }
   return ids;
 }
 function purgeOldData(){
-  // удаляем дни старше MAX_AGE_DAYS
   const now = new Date(todayISO()+'T00:00');
-  const maps=['assignments','notes','banquets','shiftSize'];
-  maps.forEach(key=>{
+  ['assignments','notes','banquets','shiftSize'].forEach(key=>{
     const m=db[key]||{};
     for(const k in m){
       const d=new Date(k+'T00:00');
@@ -264,29 +259,17 @@ function purgeOldData(){
   db.lastSeenISO=todayISO();
 }
 
-/* ====== ИНТЕРФЕЙС: СМЕНА ====== */
+/* ====== СМЕНА (автосчёт) ====== */
 function renderShiftBadge(){
-  const n = uniqueWaitersAll().size; // синхронизируем всегда
-  db.shiftSize[dateKey()] = n;
+  const n = uniqueWaitersAll().size;
+  db.shiftSize[dateKey()] = n; save();
   shiftBadge.textContent = `👥 В смене: ${n}`;
 }
-
-function openShiftModal(){
-  const wrap=document.createElement('div'); wrap.className='modal';
-  wrap.innerHTML='<div class="dialog">'+
-    '<div style="font-weight:900">Количество человек в смене</div>'+
-    '<div class="row"><label>Человек</label><input id="shNum" type="number" min="0" inputmode="numeric" placeholder="например: 12"/></div>'+
-    '<div class="row" style="justify-content:flex-end"><button id="shSave" class="btn btn-acc">Сохранить</button><button id="shClose">Отмена</button></div>'+
-  '</div>';
-  document.body.appendChild(wrap);
-  const inp=wrap.querySelector('#shNum'); inp.value = uniqueWaitersAll().size;
-  wrap.querySelector('#shSave').onclick=()=>{ const v=parseInt(inp.value,10); if(!(v>=0)) return alert('Введите число'); setShiftForDay(v); wrap.remove(); };
-  wrap.querySelector('#shClose').onclick=()=>wrap.remove();
-  wrap.addEventListener('click',e=>{ if(e.target===wrap) wrap.remove(); });
-  setTimeout(()=>inp.focus(),0);
+function openShiftInfo(){
+  alert('Количество в смене считается автоматически по уникальным именам, назначенным на позиции за выбранную дату.');
 }
-document.getElementById('setShift').onclick=openShiftModal;
-shiftBadge.onclick=openShiftModal;
+document.getElementById('setShift').onclick=openShiftInfo;
+shiftBadge.onclick=openShiftInfo;
 
 /* ====== ОФИЦИАНТЫ (шапка) ====== */
 const chipTpl=document.getElementById('chipTpl');
@@ -294,13 +277,8 @@ let selected=null; // {k:'w'|'b', id}
 
 function renderWaiterChip(w, isSecondary=false){
   const chip=chipTpl.content.firstElementChild.cloneNode(true);
-  const top=chip.querySelector('.top');
-  const nameEl=chip.querySelector('.name');
-  const noteEl=chip.querySelector('.note');
-
-  nameEl.textContent=w.name;
-  const notes=getNotes(w.id);
-  noteEl.textContent = notes.join(', ');
+  chip.querySelector('.name').textContent=w.name;
+  chip.querySelector('.note').textContent=getNotes(w.id).join(', ');
   const {bg,fg}=colorForWaiter(w.id);
   chip.style.background=bg; chip.style.color=fg; chip.style.borderColor=bg;
 
@@ -309,7 +287,7 @@ function renderWaiterChip(w, isSecondary=false){
   chip.addEventListener('click',e=>{
     if(e.target.closest('.edit')||e.target.closest('.del')) return;
     selected=(selected && selected.k==='w' && selected.id===w.id)?null:{k:'w',id:w.id};
-    renderAll(); // перерисуем панель банкетов/чипы
+    renderBanquetBar(); renderWaiters(); // подсветка
   },{passive:true});
 
   chip.querySelector('.edit').addEventListener('click',e=>{
@@ -319,7 +297,6 @@ function renderWaiterChip(w, isSecondary=false){
   chip.querySelector('.del').addEventListener('click',e=>{
     e.stopPropagation();
     if(!confirm(`Удалить «${w.name}»?`)) return;
-    // убрать из всех дней
     for(const day in db.assignments){
       const halls=db.assignments[day];
       for(const hid in halls){ for(const pid in halls[hid]){ halls[hid][pid]=(halls[hid][pid]||[]).filter(x=>!(x.k==='w'&&x.id===w.id)); } }
@@ -330,25 +307,25 @@ function renderWaiterChip(w, isSecondary=false){
     save(); renderAll();
   });
 
-  // если второстепенная смена — при первом добавлении в день помечаем "Усиление"
   chip.dataset.secondary = isSecondary ? '1' : '0';
   return chip;
 }
 
 function renderWaiters(){
-  rowPrimary.innerHTML=''; rowSecondary.innerHTML='';
-  // гарантируем наличие всех имён
+  const rowP=document.getElementById('rowPrimary');
+  const rowS=document.getElementById('rowSecondary');
+  rowP.innerHTML=''; rowS.innerHTML='';
+
   const ensureName = (n)=> { if(!db.waiters.some(w=>w.name===n)) db.waiters.push({id:UUID(),name:n}); };
   [...PRIMARY_NAMES, ...SECONDARY_NAMES].forEach(ensureName);
 
   const mapByName = Object.fromEntries(db.waiters.map(w=>[w.name,w]));
-  PRIMARY_NAMES.forEach(n=>{ const w=mapByName[n]; if(w){ rowPrimary.appendChild(renderWaiterChip(w,false)); } });
-  SECONDARY_NAMES.forEach(n=>{ const w=mapByName[n]; if(w){ rowSecondary.appendChild(renderWaiterChip(w,true)); } });
+  PRIMARY_NAMES.forEach(n=>{ const w=mapByName[n]; if(w){ rowP.appendChild(renderWaiterChip(w,false)); } });
+  SECONDARY_NAMES.forEach(n=>{ const w=mapByName[n]; if(w){ rowS.appendChild(renderWaiterChip(w,true)); } });
 
-  // toggle
   toggleSecondary.onclick=()=>{
-    const open = rowSecondary.style.display==='none';
-    rowSecondary.style.display = open?'grid':'none';
+    const open = rowS.style.display==='none';
+    rowS.style.display = open?'grid':'none';
     toggleSecondary.textContent = open?'2-я смена ↑':'2-я смена ↓';
   };
 }
@@ -402,14 +379,14 @@ function renderColumns(){
   mountHall(map['Винная комната'], col3);
 
   updateAllHallTotals();
+  renderShiftBadge();
 }
 
 function mountHall(h,into){
   if(!h) return;
   const sec=hallTpl.content.firstElementChild.cloneNode(true);
   sec.dataset.hid=h.id;
-  const titleEl=sec.querySelector('.hall-title');
-  titleEl.textContent = (HALL_ICONS[h.name]||'')+' '+h.name;
+  sec.querySelector('.hall-title').textContent = (HALL_ICONS[h.name]||'')+' '+h.name;
   const totalEl=sec.querySelector('.hall-total'); hallTotalEls.set(h.id,totalEl);
   const briefEl=sec.querySelector('.hall-brief'); hallBriefEls.set(h.id, briefEl);
   const grid=sec.querySelector('.pos-grid');
@@ -449,7 +426,6 @@ function mountHall(h,into){
     function assign(hid,pid,ent){
       const arr=ensureSlot(hid,pid);
       if(arr.some(x=>x.k===ent.k && x.id===ent.id)) return;
-      // если выбрали из 2-й смены — добавить «Усиление» (если ещё нет)
       if(ent.k==='w'){
         const w=waiterById(ent.id);
         if(SECONDARY_NAMES.includes(w.name)){
@@ -463,13 +439,11 @@ function mountHall(h,into){
       if(i>-1) arr.splice(i,1); save();
     }
 
-    // добавление выбранного (официант/банкет)
     card.addEventListener('click',e=>{
       if(e.target.closest('.adder')||e.target.closest('.assign')) return;
       if(!selected) return;
       assign(h.id,p.id, selected);
     });
-    // добавление из дропдауна
     addBtn.addEventListener('click',e=>{
       e.stopPropagation();
       const wid=pick.value; if(!wid) return;
@@ -502,7 +476,6 @@ function refreshHallBrief(hid){
       }
     });
     parts.push(`${p.name}: ${people.join(', ')}`);
-    // счётчики по позициям только по официантам
     const uniq = new Set(arr.filter(e=>e.k==='w').map(e=>e.id));
     countsByPos.push(`${uniq.size} на ${p.name}`);
   });
@@ -510,10 +483,8 @@ function refreshHallBrief(hid){
   briefEl.textContent = has ? parts.join(' • ') : '';
   briefEl.classList.toggle('has', has);
 
-  // заголовочный total
   const totalEl=hallTotalEls.get(hid);
   if(totalEl){
-    // уникальные официанты по залу
     const all = [];
     (hall.positions||[]).forEach(p=>{
       const arr=(ass[hid]&&ass[hid][p.id])||[];
@@ -606,7 +577,7 @@ function openBanquetModal(existing){
   wrap.addEventListener('click',e=>{ if(e.target===wrap) wrap.remove(); });
 }
 
-/* ====== ВЕРХНИЕ КНОПКИ ====== */
+/* ====== КНОПКИ ====== */
 document.getElementById('addWaiter').onclick=()=>{
   const wrap=document.createElement('div'); wrap.className='modal';
   wrap.innerHTML='<div class="dialog">'+
@@ -640,7 +611,7 @@ document.getElementById('date').onchange=()=>{
   resetCurrentDate(); save(); renderAll();
 };
 
-/* ====== СБРОС ТЕКУЩЕЙ ДАТЫ ====== */
+/* ====== СБРОС ДНЯ ====== */
 function resetCurrentDate(){
   const k=dateKey();
   db.assignments[k]={};
@@ -658,14 +629,13 @@ function exportText(){
 
   const ass=dayAss();
   db.halls.forEach(h=>{
-    // проверяем — есть ли хоть одна непустая позиция
     const hasAny = (h.positions||[]).some(p=> (ass[h.id]&&ass[h.id][p.id]||[]).length>0 );
-    if(!hasAny) return; // пустые залы не выводим
+    if(!hasAny) return;
 
     lines.push('\n'+(HALL_ICONS[h.name]||'')+' '+h.name+':');
     h.positions.forEach(p=>{
       const arr=(ass[h.id]&&ass[h.id][p.id])||[];
-      if(!arr.length) return; // пустые позиции не выводим
+      if(!arr.length) return;
       const people=arr.map(e=>{
         if(e.k==='w'){ const w=waiterById(e.id); const cm=getNotes(e.id); return w?(w.name + (cm.length? ' ('+cm.join(', ')+')':'')):'—'; }
         const b=banquetById(e.id); if(!b) return 'Банкет';
@@ -681,7 +651,7 @@ function exportText(){
 }
 
 /* ====== СТАРТ ====== */
-function renderAll(){ renderBanquetBar(); renderWaiters(); renderColumns(); renderShiftBadge(); }
+function renderAll(){ renderBanquetBar(); renderWaiters(); renderColumns(); }
 dateEl.value=todayISO();
 resetCurrentDate(); // чистый лист на выбранную дату
 renderAll();
