--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <div class="col" id="col3"></div>
   </div>
 
+  <!-- шаблоны -->
   <template id="chipTpl">
     <div class="chip" tabindex="0">
       <div class="top">
@@ -160,32 +161,30 @@
 (function(){
 'use strict';
 
-/* ====== индикатор ====== */
 function showOK(){ var el=document.getElementById('okbar'); if(el) el.style.display='block'; }
 
 /* ====== данные ====== */
 const UUID=(crypto&&crypto.randomUUID)?()=>crypto.randomUUID():()=>('id-'+Math.random().toString(36).slice(2));
-const STORAGE_KEY='rota-compact-v9';
+const STORAGE_KEY='rota-compact-v10';
 const MAX_AGE_DAYS=60; // 2 месяца
 
 const CHIP_COLORS=[['#E3F2FD','#0b1e4a'],['#FCE7F3','#3e1a36'],['#E8F5E9','#103b1f'],['#FFF3E0','#4a2f0b'],['#F3E8FF','#2e1065'],['#E0F2F1','#083d3b'],['#FFFDE7','#3a3000'],['#F1F5F9','#0f172a'],['#FFE4E6','#4a0b15'],['#EDE7F6','#1f1147']];
 
 const HALL_ICONS={ 'Основной зал':'🏛️','Малый (банкетный) зал':'🪑','ВИП-комнаты':'👑','Веранда':'🌿','Лофт':'🏠','Винная комната':'🍷' };
-/* ИКОНКИ ПО ТВОЕМУ СПИСКУ */
 const POS_ICONS={
   'Зона окна':'🪟',
-  '5-я линия':'📚',                 /* книги */
-  'Столы 7, 8, 9':'☕️',            /* стол в кафе */
-  'Столы 10, 11, 12':'🍽️',         /* столы в кафе */
-  'Подиум':'🪜',                    /* лестница */
+  '5-я линия':'📚',
+  'Столы 7, 8, 9':'☕️',
+  'Столы 10, 11, 12':'🍽️',
+  'Подиум':'🪜',
   'МБЗ':'🪑',
-  'Большой ВИП':'🔥',               /* камин */
-  'Малый ВИП':'📚',                 /* полка с книгами */
-  'Каюта':'⚓',                     /* штурвал → ближайшая иконка якорь */
-  'Лиенда':'💧',                    /* водопад */
+  'Большой ВИП':'🔥',
+  'Малый ВИП':'📚',
+  'Каюта':'⚓',
+  'Лиенда':'💧',
   'Веранда 1':'🌿',
-  'Веранда 2':'🌿',
-  'Лофт':'🧱',                      /* кирпичная стена */
+  'Веранда 2':'🚬', /* сигара */
+  'Лофт':'🧱',
   'Винная комната':'🍷'
 };
 
@@ -198,10 +197,9 @@ const CANON_HALLS=[
   {name:'Винная комната', positions:['Винная комната']}
 ];
 const BANQUET_TYPES={'ДР':'🎉 ДР','Свадьба':'💍 Свадьба','Корпоратив':'🏢 Корпоратив','Конференция':'📣 Конференция','День памяти':'🕯️ День памяти','Другой':'🏷️ Другое'};
-const PRIMARY_NAMES=['Виктор','Элона','Полина','Наталья Ч.','Настя','Роман'];
-const SECONDARY_NAMES=['Игорь','Катя','Юля','Наташа В.','Вова','Маша','Иван','Наташа Величко'];
+const DEFAULT_PRIMARY=['Виктор','Элона','Полина','Наталья Ч.','Настя','Роман'];
+const DEFAULT_SECONDARY=['Игорь','Катя','Юля','Наташа В.','Вова','Маша','Иван','Наташа Величко'];
 
-/* ====== утилы ====== */
 const $=sel=>document.querySelector(sel);
 function todayISO(){const tz=(new Date()).getTimezoneOffset()*60000; return new Date(Date.now()-tz).toISOString().slice(0,10);}
 function dateKey(){return $('#date').value || todayISO();}
@@ -222,10 +220,11 @@ function purgeOldData(){
 
 /* ====== база ====== */
 function buildDB(){
-  const uniq=[...new Set([...PRIMARY_NAMES,...SECONDARY_NAMES])].map(n=>({id:UUID(),name:n}));
+  const uniq=[...new Set([...DEFAULT_PRIMARY,...DEFAULT_SECONDARY])].map(n=>({id:UUID(),name:n}));
   return {
     halls: CANON_HALLS.map(h=>({id:UUID(),name:h.name,positions:h.positions.map(n=>({id:UUID(),name:n}))})),
     waiters: uniq,
+    metaShifts: { primary:[...DEFAULT_PRIMARY], secondary:[...DEFAULT_SECONDARY] }, // сохраняем смены
     assignments:{}, notes:{}, banquets:{}, shiftSize:{}
   };
 }
@@ -258,14 +257,14 @@ const posCardTpl=document.getElementById('posCardTpl');
 
 let selected=null; // {k:'w'|'b', id}
 
-/* ====== шапка: счётчик ====== */
+/* ====== счётчик ====== */
 function renderShiftBadge(){
   const n = uniqueWaitersAll().size;
   db.shiftSize[dateKey()] = n; save();
   $('#shiftBadge').textContent = `👥 В смене: ${n}`;
 }
 
-/* ====== шапка: официанты ====== */
+/* ====== официанты ====== */
 function renderWaiterChip(w, isSecondary=false){
   const chip=chipTpl.content.firstElementChild.cloneNode(true);
   chip.querySelector('.name').textContent=w.name;
@@ -294,6 +293,9 @@ function renderWaiterChip(w, isSecondary=false){
     }
     for(const day in db.notes){ if(db.notes[day]) delete db.notes[day][w.id]; }
     db.waiters=db.waiters.filter(x=>x.id!==w.id);
+    // удаляем имя из списков смен
+    db.metaShifts.primary=db.metaShifts.primary.filter(n=>n!==w.name);
+    db.metaShifts.secondary=db.metaShifts.secondary.filter(n=>n!==w.name);
     if(selected && selected.k==='w' && selected.id===w.id) selected=null;
     save(); renderAll();
   });
@@ -304,11 +306,19 @@ function renderWaiterChip(w, isSecondary=false){
 function renderWaiters(){
   const rowP=$('#rowPrimary'), rowS=$('#rowSecondary');
   rowP.innerHTML=''; rowS.innerHTML='';
-  const ensureName=n=>{ if(!db.waiters.some(w=>w.name===n)) db.waiters.push({id:UUID(),name:n}); };
-  [...PRIMARY_NAMES,...SECONDARY_NAMES].forEach(ensureName);
+
+  // убедимся, что все waiters присутствуют в одной из смен
+  db.waiters.forEach(w=>{
+    if(!db.metaShifts.primary.includes(w.name) && !db.metaShifts.secondary.includes(w.name)){
+      db.metaShifts.primary.push(w.name);
+    }
+  });
+
   const map=Object.fromEntries(db.waiters.map(w=>[w.name,w]));
-  PRIMARY_NAMES.forEach(n=>{ const w=map[n]; if(w) rowP.appendChild(renderWaiterChip(w,false)); });
-  SECONDARY_NAMES.forEach(n=>{ const w=map[n]; if(w) rowS.appendChild(renderWaiterChip(w,true)); });
+  db.metaShifts.primary.forEach(n=>{ const w=map[n]; if(w) rowP.appendChild(renderWaiterChip(w,false)); });
+  db.metaShifts.secondary.forEach(n=>{ const w=map[n]; if(w) rowS.appendChild(renderWaiterChip(w,true)); });
+
+  save();
 }
 
 /* ====== банкеты ====== */
@@ -398,7 +408,7 @@ function mountHall(h,into){
       if(arr.some(x=>x.k===ent.k && x.id===ent.id)) return;
       if(ent.k==='w'){
         const w=waiterById(ent.id);
-        if(SECONDARY_NAMES.includes(w.name)){
+        if(db.metaShifts.secondary.includes(w.name)){
           const tags=getNotes(ent.id); if(!tags.includes('Усиление')) addNote(ent.id,'Усиление');
         }
       }
@@ -465,7 +475,7 @@ function refreshHallBrief(hid){
 }
 function updateAllHallTotals(){ db.halls.forEach(h=> refreshHallBrief(h.id)); }
 
-/* ====== slot item ====== */
+/* ====== элемент в позиции ====== */
 function renderAssign(name, notesArr, bg, fg, onRemove){
   const el=document.createElement('div'); el.className='assign';
   if(bg){ el.style.background=bg; el.style.borderColor=bg; }
@@ -481,7 +491,7 @@ function renderAssign(name, notesArr, bg, fg, onRemove){
   return el;
 }
 
-/* ====== комменты ====== */
+/* ====== комментарии ====== */
 function openCommentsModal(wid, wname){
   const presets=['Помощь на веранде 1','Помощь на веранде 2','Помощь в ОЗ','Помощь на ВИПах','Помощь в МБЗ','Первый номер на банкете','Второй номер на банкете','Усиление'];
   const wrap=document.createElement('div'); wrap.className='modal';
@@ -517,26 +527,56 @@ function openCommentsModal(wid, wname){
   redraw();
 }
 
-/* ====== модалка банкет ====== */
+/* ====== банкет: модалка (с выбором места) ====== */
 function openBanquetModal(existing){
   const isEdit=!!existing;
   const wrap=document.createElement('div'); wrap.className='modal';
+
+  // собираем список мест
+  const placeOptions = db.halls.map(h=>{
+    const opts = h.positions.map(p=>`<option value="${h.id}|${p.id}">${h.name} — ${p.name}</option>`).join('');
+    return `<optgroup label="${h.name}">${opts}</optgroup>`;
+  }).join('');
+
   wrap.innerHTML = '<div class="dialog">'+
     `<div style="font-weight:900">${isEdit?'Изменить банкет':'Новый банкет'}</div>`+
     '<div class="row"><label>Кол-во персон</label><input id="bnPeople" type="number" min="1" inputmode="numeric" placeholder="25"/></div>'+
     '<div class="row"><label>Вид</label><select id="bnType"><option>ДР</option><option>Свадьба</option><option>Корпоратив</option><option>Конференция</option><option>День памяти</option><option>Другой</option></select></div>'+
     '<div class="row" id="bnOtherRow" style="display:none"><label>Другой</label><input id="bnOther"/></div>'+
     '<div class="row"><label>Комментарий</label><textarea id="bnNote" rows="3" placeholder="Пожелания, тайминг..."></textarea></div>'+
+    `<div class="row"><label>Место</label><select id="bnPlace"><option value="">— не выбирать —</option>${placeOptions}</select></div>`+
     `<div class="row" style="justify-content:flex-end"><button id="bnSave" class="btn btn-acc">${isEdit?'Сохранить':'Добавить'}</button><button id="bnClose">Закрыть</button></div>`+
   '</div>';
+
   document.body.appendChild(wrap);
-  const people=wrap.querySelector('#bnPeople'), type=wrap.querySelector('#bnType'), otherRow=wrap.querySelector('#bnOtherRow'), other=wrap.querySelector('#bnOther'), note=wrap.querySelector('#bnNote');
+  const people=wrap.querySelector('#bnPeople'), type=wrap.querySelector('#bnType'),
+        otherRow=wrap.querySelector('#bnOtherRow'), other=wrap.querySelector('#bnOther'),
+        note=wrap.querySelector('#bnNote'), place=wrap.querySelector('#bnPlace');
+
   type.onchange=()=>{ otherRow.style.display=(type.value==='Другой')?'flex':'none'; };
-  if(isEdit){ people.value=existing.people; type.value=existing.type; note.value=existing.note||''; if(existing.type==='Другой'){ otherRow.style.display='flex'; if(other) other.value=existing.other||''; } }
+  if(isEdit){
+    people.value=existing.people; type.value=existing.type; note.value=existing.note||'';
+    if(existing.type==='Другой'){ otherRow.style.display='flex'; if(other) other.value=existing.other||''; }
+  }
+
   wrap.querySelector('#bnSave').onclick=()=>{
     const n=parseInt(people.value,10); if(!(n>0)) return alert('Укажите число персон.');
-    if(isEdit){ existing.people=n; existing.type=type.value; existing.other=(other&&other.value||'').trim(); existing.note=(note.value||'').trim(); }
-    else { banquetsForDay().push({id:UUID(), people:n, type:type.value, other:(other&&other.value||'').trim(), note:(note.value||'').trim()}); }
+    let b;
+    if(isEdit){
+      existing.people=n; existing.type=type.value; existing.other=(other&&other.value||'').trim(); existing.note=(note.value||'').trim();
+      b=existing;
+    } else {
+      b={id:UUID(), people:n, type:type.value, other:(other&&other.value||'').trim(), note:(note.value||'').trim()};
+      banquetsForDay().push(b);
+    }
+
+    // если выбрано место — добавляем банкет в соответствующую позицию
+    if(place.value){
+      const [hid,pid]=place.value.split('|');
+      const arr=ensureSlot(hid,pid);
+      if(!arr.some(x=>x.k==='b'&&x.id===b.id)){ arr.push({k:'b',id:b.id}); }
+    }
+
     save(); renderAll(); wrap.remove();
   };
   wrap.querySelector('#bnClose').onclick=()=>wrap.remove();
@@ -550,7 +590,7 @@ function fillPick(selectEl){
 }
 function renderShiftAndTotals(){ updateAllHallTotals(); renderShiftBadge(); }
 
-/* ====== экспорт (общий формат) ====== */
+/* ====== экспорт (WA/TG/Email общий текст) ====== */
 function exportTextWhatsApp(){
   const iso = dateKey();
   const n = uniqueWaitersAll().size;
@@ -560,7 +600,6 @@ function exportTextWhatsApp(){
     `В смене ${n} человек. 🕺`,
     ''
   ];
-  // Банкеты строго после количества
   const b = banquetsForDay();
   if(b.length===0){
     lines.push('Банкеты: 0', '');
@@ -602,7 +641,7 @@ function exportTextWhatsApp(){
 function exportTextTelegram(){ return exportTextWhatsApp(); }
 function exportTextEmail(){ return exportTextWhatsApp(); }
 
-/* ====== Сброс дня ====== */
+/* ====== сброс дня ====== */
 function resetCurrentDate(){
   const k=dateKey();
   db.assignments[k]={};
@@ -611,14 +650,13 @@ function resetCurrentDate(){
   delete db.shiftSize[k];
 }
 
-/* ====== Статистика за месяц ====== */
+/* ====== статистика ====== */
 function openStatsModal(){
-  // период: последние 30 дней от выбранной даты
   const end = new Date(dateKey()+'T00:00');
-  const start = new Date(end); start.setDate(end.getDate()-29); // 30 дней
+  const start = new Date(end); start.setDate(end.getDate()-29);
   const within=(iso)=>{ const d=new Date(iso+'T00:00'); return d>=start && d<=end; };
 
-  const counts = {}; // waiterId -> {shifts:Set(dates), byHall:{hid:count}}
+  const counts = {};
   Object.keys(db.assignments).filter(within).forEach(iso=>{
     const halls=db.assignments[iso]||{};
     for(const hid in halls){
@@ -637,7 +675,6 @@ function openStatsModal(){
   const rows = Object.keys(counts).map(wid=>{
     const w=waiterById(wid); const hBy=counts[wid].byHall;
     const total=counts[wid].shifts.size;
-    // топ-3 залов
     const top = Object.entries(hBy)
       .map(([hid,c])=>({name:db.halls.find(h=>h.id===hid)?.name||'?', c}))
       .sort((a,b)=>b.c-a.c).slice(0,3)
@@ -661,47 +698,55 @@ function openStatsModal(){
   wrap.addEventListener('click',e=>{ if(e.target===wrap) wrap.remove(); });
 }
 
-/* ====== РЕНДЕР ВСЕГО ====== */
+/* ====== рендер всего ====== */
 function renderAll(){
   renderBanquetBar();
   renderWaiters();
   renderColumns();
 }
 
-/* ====== INIT ====== */
+/* ====== init ====== */
 document.addEventListener('DOMContentLoaded', function(){
   showOK();
 
   const dateEl=document.getElementById('date');
-  // стартуем с сегодняшней даты, НЕ очищая (для истории)
   dateEl.value = dateEl.value || todayISO();
   renderAll();
   renderShiftAndTotals();
 
-  // переключение даты: просто показываем сохранённое или пустое (без авто-очистки)
   dateEl.addEventListener('change', ()=>{ renderAll(); renderShiftAndTotals(); });
 
-  // раскрутка 2-й смены
   document.getElementById('toggleSecondary').addEventListener('click',()=>{
     const rowS=$('#rowSecondary'); const open=rowS.style.display==='none';
     rowS.style.display=open?'grid':'none';
     document.getElementById('toggleSecondary').textContent=open?'2-я смена ↑':'2-я смена ↓';
   });
 
-  // добавить официанта
+  // ДОБАВИТЬ ОФИЦИАНТА (с выбором смены)
   document.getElementById('addWaiter').addEventListener('click',()=>{
     const wrap=document.createElement('div'); wrap.className='modal';
     wrap.innerHTML='<div class="dialog">'+
       '<div style="font-weight:900">Новый официант</div>'+
       '<div class="row"><label>Имя</label><input id="wName" placeholder="например: Павел"/></div>'+
+      '<div class="row"><label>Смена</label><select id="wShift"><option value="1">1-я смена</option><option value="2">2-я смена</option></select></div>'+
       '<div class="row" style="justify-content:flex-end"><button id="wSave" class="btn btn-acc">Добавить</button><button id="wClose">Отмена</button></div>'+
     '</div>';
     document.body.appendChild(wrap);
-    const input=wrap.querySelector('#wName');
+    const input=wrap.querySelector('#wName'), sel=wrap.querySelector('#wShift');
     wrap.querySelector('#wSave').onclick=()=>{
       const name=(input.value||'').trim(); if(!name) return;
-      if(db.waiters.some(w=>w.name.toLowerCase()===name.toLowerCase())) return alert('Такое имя уже есть.');
-      db.waiters.push({id:UUID(), name}); save(); renderAll(); wrap.remove();
+      if(db.waiters.some(w=>w.name.toLowerCase()===name.toLowerCase())) return alert('Такое имя уже существует.');
+      db.waiters.push({id:UUID(), name});
+      if(sel.value==='2'){
+        // в 2-ю смену
+        db.metaShifts.secondary.push(name);
+        // и на всякий случай удалить из 1-й, если вдруг было
+        db.metaShifts.primary = db.metaShifts.primary.filter(n=>n!==name);
+      }else{
+        db.metaShifts.primary.push(name);
+        db.metaShifts.secondary = db.metaShifts.secondary.filter(n=>n!==name);
+      }
+      save(); renderAll(); wrap.remove();
     };
     wrap.querySelector('#wClose').onclick=()=>wrap.remove();
     wrap.addEventListener('click',e=>{ if(e.target===wrap) wrap.remove(); });
@@ -746,6 +791,7 @@ document.addEventListener('DOMContentLoaded', function(){
   // статистика
   document.getElementById('statsBtn').addEventListener('click', openStatsModal);
 });
-})();</script>
+})();
+</script>
 </body>
 </html>
