--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ function exportTextWhatsApp(){
   const lines = [
     'Добрый день, друзья!',
     `📅 ${fmtDateRU(iso)}`,
-    `В смене ${n} человек. 🕺`,
+    `В смене ${n} человек(а). 🕺`,
     ''
   ];
   const b = banquetsForDay();
